--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appName">Task Buddy</string>
     <string name="update">Update</string>
+    <string name="update_status_of_the_task">Update Status of The Task</string>
+    <string name="to_do">To Do</string>
+    <string name="in_progress">In-Progress</string>
+    <string name="completed">Completed</string>
+    <string-array name="status_options">
+        <item>In-Progress</item>
+        <item>Completed</item>
+    </string-array>
 </resources>
