fix edit task logical  error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="completed">Completed</string>
     <string name="manage_your_work_here">Manage Your Work Here..</string>
     <string-array name="status_options">
+        <item>To-Do</item>
         <item>In-Progress</item>
         <item>Completed</item>
     </string-array>
